@@ -82,11 +82,23 @@ class ShopmodxResource extends modResource{
     }
     
     public function process(){
-        if($this->_process() !== true){
+        $this->_process();
+        if(!$this->_processed){
             return parent::process();
         }
         return $this->_content;
     }
     
-    protected function _process(){return ;}
+    protected function _process(){
+        $this->_content= '';
+        $this->_output= '';
+        $this->xpdo->getParser();
+        if ($baseElement= $this->getOne('Template') AND $baseElement->process()) {
+            $this->_content= $baseElement->_output;
+            $this->_processed= true;
+        } else {
+            return parent::process();
+        }
+        return $this->_content;
+    }
 }
